# internal/model/auth.go
@@ -2,7 +2,6 @@ package model
 
 type RegisterRequest struct {
 	VerifyKey  string `json:"verify_key" validate:"required"`
-	VerifyType string `json:"verify_type" validate:"required"`
 }
 
 type VerifyRequest struct {
@@ -29,4 +28,9 @@ type LoginResponse struct {
 	UserId       int    `json:"user_id"`
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
+}
+
+
+type ForgotPasswordRequest struct {
+	VerifyKey  string `json:"verify_key" validate:"required"`
 }
